<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="100dp"
    android:background="@drawable/main111"
    android:orientation="vertical">



    <EditText
        android:id="@+id/login_id"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:paddingLeft="8dp"
        android:background="@drawable/login_text"
        android:hint="@string/textlogin_id"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:paddingLeft="8dp"
        android:background="@drawable/login_text"
        android:hint="@string/textlogin_pwd"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/login_button"
            android:onClick="login"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="16dp"
            android:background="#e4b8b8"
            android:text="@string/text_loginbutton"
            android:textColor="#0b1000"
            android:textSize="20dp" />


    </LinearLayout>
</LinearLayout>